--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
 	<meta charset="utf-8" />
 	<!--[if lt IE 9]> <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
 
-	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="/Shape Up/styles/normalize.css">
+	<link rel="stylesheet" href="/styles/main.css" >
 	<title>Shape Up</title>
+
+	 
 </head>
 
 <body>
 	<header>
-		<img id= "logoimage"src="images/shape_up_logo.png" alt="">
+		<img id= "logoimage" src="images/shape_up_logo.png" alt="">
 		<h2>Shape Up</h2>
 		<h3>Find the best fit for you</h3>
 	</header>
